--- a/index.html
+++ b/index.html
@@ -469,6 +469,11 @@
     padding-bottom: 60px;
   }
 }
+@media (max-width: 768px) {
+  .live-stats-desktop {
+    display: none;
+  }
+}
 
   </style>
   <script src="https://unpkg.com/lucide@latest"></script>
