--- a/index.html
+++ b/index.html
@@ -316,23 +316,6 @@
       80% { opacity: 1; }
       100% { opacity: 0; }
     }
-  
-
-
-@media (max-width: 600px) {
-  .stats-toggle-bar {
-    position: sticky;
-    top: 0;
-    width: 100%;
-    background-color: #1a1a1a;
-    color: #fff;
-    text-align: center;
-    padding: 8px 0;
-    font-size: 14px;
-    cursor: pointer;
-    z-index: 9999;
-    border-bottom: 1px solid #333;
-  }
 
   #stats-container.collapsed {
     display: none;
@@ -397,12 +380,6 @@
     flex-shrink: 0; /* keeps icons from getting squished */
   }
 }
-@media (max-width: 600px) {
-  .layout-wrapper {
-    margin-top: 40px;
-    flex-direction: column;
-    align-items: center;
-  }
 
   #app-frame {
     width: 100%;
@@ -474,16 +451,6 @@
     display: none;
   }
 }
-@media (max-width: 600px) {
-  #app-frame {
-    padding-top: 40px; /* makes room for the sticky toggle button */
-  }
-}
-@media (max-width: 600px) {
-  #stats-container {
-    position: relative;
-    width: 100%;
-  }
 
   .live-stats-sidebar {
     position: relative;
@@ -501,13 +468,6 @@
     border-top: 1px solid #333;
   }
 }
-@media (max-width: 600px) {
-  #app-frame {
-    padding-top: 40px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
 
   #stats-container {
     width: 100%;
@@ -547,6 +507,90 @@
   }
 
   #stats-container.collapsed {
+    display: none;
+  }
+}
+@media (max-width: 600px) {
+  #app-frame {
+    padding-top: 40px;
+    padding-left: 12px;
+    padding-right: 12px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+  }
+
+  #stats-container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  #stats-container.collapsed {
+    display: none;
+  }
+
+  .live-stats-sidebar {
+    position: sticky;
+    top: 36px;
+    width: 100%;
+    max-width: 645px;
+    background-color: #111;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, auto);
+    gap: 4px;
+    padding: 8px;
+    font-size: 10px;
+    border-top: 1px solid #333;
+    border-bottom: 1px solid #333;
+    border-bottom-left-radius: 12px;
+    border-bottom-right-radius: 12px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+    z-index: 999;
+  }
+
+  .stats-toggle-bar {
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    width: 100%;
+    background-color: #1a1a1a;
+    color: #fff;
+    text-align: center;
+    padding: 8px 0;
+    font-size: 14px;
+    cursor: pointer;
+    border-bottom: 1px solid #333;
+  }
+
+  .layout-wrapper {
+    margin-top: 0;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .bottom-nav {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    max-width: 100%;
+    background-color: #000;
+    display: flex;
+    justify-content: space-around;
+    padding: 8px 0;
+    z-index: 1000;
+  }
+
+  .main-content {
+    padding-bottom: 60px;
+  }
+
+  .live-stats-desktop {
     display: none;
   }
 }
