--- a/index.html
+++ b/index.html
@@ -597,6 +597,23 @@
     display: none !important;
   }
 }
+@media (max-width: 768px) {
+  .live-stats-desktop {
+    display: none !important;
+  }
+
+  .stats-toggle-bar {
+    display: block !important;
+  }
+
+  #stats-container {
+    display: flex;
+  }
+
+  #stats-container.collapsed {
+    display: none !important;
+  }
+}
 
   </style>
   <script src="https://unpkg.com/lucide@latest"></script>
