--- a/index.html
+++ b/index.html
@@ -614,6 +614,11 @@
     display: none !important;
   }
 }
+.stats-toggle-bar {
+  background-color: red !important;
+  display: block !important;
+  z-index: 9999 !important;
+}
 
   </style>
   <script src="https://unpkg.com/lucide@latest"></script>
