--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       padding: 0;
     }
     html, body {
-      height: 100%;
-      overflow: hidden;
+      height: auto;
+      overflow: auto;
     }
     body {
       font-family: Arial, sans-serif;
@@ -26,13 +26,15 @@
       padding: 0;
     }
     .layout-wrapper {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 100%;
-      max-width: 1600px;
-      height: 100vh;
-    }
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  width: 100%;
+  max-width: 1600px;
+  min-height: 100vh;  /* was height: 100vh — use min-height instead */
+  flex-direction: row;
+}
+
     #live-stats {
       flex-shrink: 0;
       width: 180px;
@@ -614,9 +616,8 @@
     display: none !important;
   }
 }
+
 .stats-toggle-bar {
-  background-color: red !important;
-  display: block !important;
   z-index: 9999 !important;
 }
 
