--- a/index.html
+++ b/index.html
@@ -7,392 +7,378 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>InstaVoid</title>
 <style>
-/* GENERAL STYLES */
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+box-sizing: border-box;
+margin: 0;
+padding: 0;
 }
 html, body {
-  height: 100%;
-  overflow: hidden;
+height: 100%;
+overflow: hidden;
 }
 body {
-  font-family: Arial, sans-serif;
-  background-color: #eeeeee;
-  color: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0;
+font-family: Arial, sans-serif;
+background-color: #eeeeee;
+color: #fff;
+display: flex;
+justify-content: center;
+align-items: center;
+padding: 0;
 }
 .layout-wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  max-width: 1600px;
-  height: 100vh;
+display: flex;
+align-items: center;
+justify-content: center;
+width: 100%;
+max-width: 1600px;
+height: 100vh;
 }
 #live-stats {
-  flex-shrink: 0;
-  width: 180px;
-  margin-right: 20px;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  padding: 10px;
-  background-color: #1a1a1a;
-  border-radius: 12px;
-  box-shadow: 0 0 10px rgba(0,0,0,0.5);
-  position: sticky;
-  top: 20px;
-  height: fit-content;
-  font-size: 0.85rem;
-  line-height: 1.6;
+flex-shrink: 0;
+width: 180px;
+margin-right: 20px;
+display: flex;
+flex-direction: column;
+justify-content: flex-start;
+padding: 10px;
+background-color: #1a1a1a;
+border-radius: 12px;
+box-shadow: 0 0 10px rgba(0,0,0,0.5);
+position: sticky;
+top: 20px;
+height: fit-content;
+font-size: 0.85rem;
+line-height: 1.6;
 }
 #app-frame {
-  width: min(645px, 95vw);
-  height: 100vh;
-  background-color: #0f0f0f;
-  border-radius: 20px;
-  box-shadow: 0 0 15px rgba(0,0,0,0.3);
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  position: relative;
+width: min(645px, 95vw);
+height: 100vh;
+background-color: #0f0f0f;
+border-radius: 20px;
+box-shadow: 0 0 15px rgba(0,0,0,0.3);
+overflow: hidden;
+display: flex;
+flex-direction: column;
+position: relative;
 }
 .content-wrapper {
-  flex: 1;
-  overflow-y: auto;
-  padding-bottom: 60px;
+flex: 1;
+overflow-y: auto;
+padding-bottom: 60px;
 }
 .content-wrapper::-webkit-scrollbar {
-  width: 8px;
+width: 8px;
 }
 .content-wrapper::-webkit-scrollbar-track {
-  background: transparent;
+background: transparent;
 }
 .content-wrapper::-webkit-scrollbar-thumb {
-  background-color: rgba(100, 100, 100, 0.3);
-  border-radius: 4px;
+background-color: rgba(100, 100, 100, 0.3);
+border-radius: 4px;
 }
 .bottom-nav {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background-color: #1a1a1a;
-  border-top: 1px solid #333;
-  display: flex;
-  justify-content: space-around;
-  padding: 0.5rem 0;
-  z-index: 10;
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
+position: absolute;
+bottom: 0;
+left: 0;
+right: 0;
+background-color: #1a1a1a;
+border-top: 1px solid #333;
+display: flex;
+justify-content: space-around;
+padding: 0.5rem 0;
+z-index: 10;
+border-bottom-left-radius: 20px;
+border-bottom-right-radius: 20px;
 }
 .bottom-nav a {
-  color: #888;
-  text-decoration: none;
-  font-size: 1.3rem;
+color: #888;
+text-decoration: none;
+font-size: 1.3rem;
+}
+@media (max-width: 768px) {
+.layout-wrapper {
+flex-direction: column;
+align-items: center;
+}
+#live-stats {
+width: 100%;
+margin: 0 0 20px 0;
+flex-direction: row;
+justify-content: space-around;
+}
+#app-frame {
+width: 100%;
+height: 100%;
+border-radius: 0;
+}
 }
 
-/* HEADER & NAVIGATION */
+/* Original styles */
 header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 1rem;
-  background-color: #1a1a1a;
-  border-bottom: 1px solid #333;
+display: flex;
+align-items: center;
+justify-content: space-between;
+padding: 1rem;
+background-color: #1a1a1a;
+border-bottom: 1px solid #333;
 }
 .logo-img {
-  height: 48px;
-  max-width: 200px;
-  object-fit: contain;
-  margin-left: 1rem;
-  filter: drop-shadow(0 0 2px #f44);
+height: 48px;
+max-width: 200px;
+object-fit: contain;
+margin-left: 1rem;
+filter: drop-shadow(0 0 2px #f44);
+}
+
 }
 .nav-icons {
-  display: flex;
-  align-items: center;
-  gap: 15px;
-  position: relative;
+display: flex;
+align-items: center;
+gap: 15px;
+position: relative;
 }
 .nav-icons img {
-  width: 24px;
-  height: 24px;
-  cursor: pointer;
-  filter: invert(60%);
+width: 24px;
+height: 24px;
+cursor: pointer;
+filter: invert(60%);
 }
 #notificationDropdown {
-  position: absolute;
-  top: 40px;
-  right: 0;
-  background-color: #1a1a1a;
-  border: 1px solid #333;
-  padding: 0.5rem;
-  border-radius: 6px;
-  width: 250px;
-  display: none;
-  z-index: 1000;
-  box-shadow: 0 0 10px #000;
+position: absolute;
+top: 40px;
+right: 0;
+background-color: #1a1a1a;
+border: 1px solid #333;
+padding: 0.5rem;
+border-radius: 6px;
+width: 250px;
+display: none;
+z-index: 1000;
+box-shadow: 0 0 10px #000;
 }
 #notificationDropdown p {
-  font-size: 0.9rem;
-  color: #ccc;
-  margin-bottom: 0.5rem;
-  border-bottom: 1px solid #333;
-  padding-bottom: 0.5rem;
+font-size: 0.9rem;
+color: #ccc;
+margin-bottom: 0.5rem;
+border-bottom: 1px solid #333;
+padding-bottom: 0.5rem;
 }
-
-/* FEED CONTENT */
 .stories {
-  display: flex;
-  overflow-x: auto;
-  padding: 1rem;
-  border-bottom: 1px solid #333;
+display: flex;
+overflow-x: auto;
+padding: 1rem;
+border-bottom: 1px solid #333;
 }
 .story {
-  flex: 0 0 auto;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  margin-right: 10px;
-  border: 2px solid #f44;
-  background-size: cover;
-  background-position: center;
-  background-color: #444;
+flex: 0 0 auto;
+width: 60px;
+height: 60px;
+border-radius: 50%;
+margin-right: 10px;
+border: 2px solid #f44;
+background-size: cover;
+background-position: center;
+background-color: #444;
 }
 main {
-  padding: 1rem;
+padding: 1rem;
 }
 .post {
-  background-color: #1c1c1c;
-  border: 1px solid #333;
-  margin: 2rem auto;
-  width: 100%;
-  max-width: 550px;
-  color: #fff;
-  position: relative;
+background-color: #1c1c1c;
+border: 1px solid #333;
+margin: 2rem auto;
+width: 100%;
+max-width: 550px;
+color: #fff;
+position: relative;
 }
 .post-header {
-  display: flex;
-  align-items: center;
-  padding: 10px;
+display: flex;
+align-items: center;
+padding: 10px;
 }
 .post-header img {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  margin-right: 10px;
+width: 40px;
+height: 40px;
+border-radius: 50%;
+margin-right: 10px;
 }
 .post-header span {
-  font-weight: bold;
-  color: #ccc;
+font-weight: bold;
+color: #ccc;
 }
 .post-image {
-  width: 100%;
-  height: 400px;
-  background-color: #333;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  font-size: 2rem;
-  font-weight: bold;
-  color: #eee;
+width: 100%;
+height: 400px;
+background-color: #333;
+display: flex;
+align-items: center;
+justify-content: center;
+text-align: center;
+font-size: 2rem;
+font-weight: bold;
+color: #eee;
 }
 .post-actions {
-  display: flex;
-  justify-content: space-around;
-  padding: 10px;
+display: flex;
+justify-content: space-around;
+padding: 10px;
 }
 .post-actions button {
-  background: none;
-  border: none;
-  cursor: pointer;
-  color: #ccc;
-  font-size: 1.1rem;
+background: none;
+border: none;
+cursor: pointer;
+color: #ccc;
+font-size: 1.1rem;
 }
-
-/* COMMENT POPUPS */
 .comment-box {
-  padding: 0.5rem 1rem 1rem;
-  display: flex;
-  gap: 10px;
-  align-items: center;
-  display: none;
+padding: 0.5rem 1rem 1rem;
+display: flex;
+gap: 10px;
+align-items: center;
+display: none;
 }
 .comment-box input {
-  flex: 1;
-  padding: 0.5rem;
-  background-color: #111;
-  border: 1px solid #444;
-  color: #ccc;
-  border-radius: 4px;
-  font-size: 0.9rem;
+flex: 1;
+padding: 0.5rem;
+background-color: #111;
+border: 1px solid #444;
+color: #ccc;
+border-radius: 4px;
+font-size: 0.9rem;
 }
 .comment-box button {
-  padding: 0.5rem 0.8rem;
-  background-color: #222;
-  border: 1px solid #444;
-  color: #ccc;
-  border-radius: 4px;
-  cursor: pointer;
+padding: 0.5rem 0.8rem;
+background-color: #222;
+border: 1px solid #444;
+color: #ccc;
+border-radius: 4px;
+cursor: pointer;
 }
 .like-popup {
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, 0);
-  background-color: #222;
-  color: #fff;
-  font-size: 1rem;
-  font-weight: bold;
-  padding: 12px 18px;
-  border-radius: 10px;
-  box-shadow: 0 0 12px rgba(255, 255, 255, 0.2);
-  opacity: 0;
-  pointer-events: none;
-  z-index: 5;
-  animation: floatUpFade 2.5s ease-out forwards;
+position: absolute;
+top: 60%;
+left: 50%;
+transform: translate(-50%, 0);
+background-color: #222;
+color: #fff;
+font-size: 1rem;
+font-weight: bold;
+padding: 12px 18px;
+border-radius: 10px;
+box-shadow: 0 0 12px rgba(255, 255, 255, 0.2);
+opacity: 0;
+pointer-events: none;
+z-index: 5;
+animation: floatUpFade 2.5s ease-out forwards;
 }
 
-/* KEYFRAMES */
 @keyframes floatUpFade {
-  0% { opacity: 0; transform: translate(-50%, 10px); }
-  10% { opacity: 1; }
-  90% { opacity: 1; transform: translate(-50%, 0px); }
-  100% { opacity: 0; transform: translate(-50%, -5px); }
+0% {
+opacity: 0;
+transform: translate(-50%, 10px);
+}
+10% {
+opacity: 1;
+}
+90% {
+opacity: 1;
+transform: translate(-50%, -10px);
+}
+100% {
+opacity: 0;
+transform: translate(-100%, -20px);
+}
+}
+
+
+@keyframes floatUpFade {
+0% {
+opacity: 0;
+transform: translate(-50%, 10px);
+}
+10% {
+opacity: 1;
+}
+90% {
+opacity: 1;
+transform: translate(-50%, 0px);
+}
+100% {
+opacity: 0;
+transform: translate(-50%, -5px);
+}
+}
+
 }
 @keyframes fadeout {
-  0% { opacity: 1; }
-  80% { opacity: 1; }
-  100% { opacity: 0; }
+0% { opacity: 1; }
+80% { opacity: 1; }
+100% { opacity: 0; }
 }
-
-/* MOBILE STYLES */
-@media (max-width: 768px) {
-  .layout-wrapper {
-    flex-direction: column;
-    align-items: center;
-  }
-  #live-stats {
-    display: none;
-  }
-  #app-frame {
-    width: 100%;
-    height: auto;
-    padding-top: 40px;
-    padding-left: 12px;
-    padding-right: 12px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .stats-toggle-bar {
+    @media (max-width: 600px) {
+  .live-stats-sidebar {
     position: sticky;
     top: 0;
-    width: 100%;
-    background-color: #1a1a1a;
-    color: #fff;
-    text-align: center;
-    padding: 8px 0;
-    font-size: 14px;
-    font-weight: bold;
-    cursor: pointer;
-    z-index: 1000;
-    border-bottom: 1px solid #333;
-  }
-
-  #stats-container {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-  }
-  #stats-container.collapsed {
-    display: none;
-  }
-
-  #stats-container:not(.collapsed) .live-stats-sidebar {
-    position: sticky;
-    top: 48px;
-    background-color: #111;
-    width: 100%;
-    max-width: 645px;
+    background-color: #111; /* Or whatever your background is */
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: repeat(2, auto);
     gap: 4px;
     padding: 8px;
     font-size: 10px;
-    border-top: 1px solid #333;
-    border-bottom: 1px solid #333;
-    border-bottom-left-radius: 12px;
-    border-bottom-right-radius: 12px;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
     z-index: 999;
   }
 
-  .live-stats-sidebar div {
+  .live-stats-sidebar .stat {
+    text-align: center;
+    padding: 2px;
+    word-wrap: break-word;
+  }
+
+  /* Optional: If icons or emojis are used */
+  .live-stats-sidebar .stat-icon {
+    font-size: 12px;
+    display: block;
+  }
+
+  .bottom-nav {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    max-width: 100%;
+    background-color: #000; /* Adjust to match theme */
     display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 4px;
-    white-space: nowrap;
-    font-size: 11px;
+    justify-content: space-around;
+    padding: 8px 0;
+    z-index: 1000;
+  }
+
+  /* Avoid overlap between nav and content */
+  .main-content {
+    padding-bottom: 60px; /* space for bottom nav */
   }
 }
 
-/* HIDE MOBILE ELEMENTS ON DESKTOP */
-@media (min-width: 769px) {
-  .stats-toggle-bar,
-  #stats-container {
-    display: none !important;
-  }
-}
 </style>
-
 <script src="https://unpkg.com/lucide@latest"></script>
 
 </head>
 <body>
 <div class="layout-wrapper">
-<div id="live-stats" class="live-stats-desktop">
-  <div>Minutes Wasted: <span id="stat-minutes">0</span></div>
-  <div>Scrolls Done: <span id="stat-scrolls">0</span></div>
-  <div>Likes Given: <span id="stat-likes">0</span></div>
-  <div>Comments Given: <span id="stat-comments">0</span></div>
-  <div>Reposts Done: <span id="stat-reposts">0</span></div>
-  <div>Bookmarks: <span id="stat-bookmarks">0</span></div>
-  <div>Reels Viewed: <span id="stat-reels">0</span></div>
-  <div>Stories Viewed: <span id="stat-stories">0</span></div>
-  <div>Posts Posted: <span id="stat-posts">0</span></div>
-  <div>Profiles Visited: <span id="stat-profiles">0</span></div>
+<div id="live-stats">
+<div>Minutes Wasted: <span id="stat-minutes">0</span></div>
+<div>Scrolls Done: <span id="stat-scrolls">0</span></div>
+<div>Likes Given: <span id="stat-likes">0</span></div>
+<div>Comments Given: <span id="stat-comments">0</span></div>
+<div>Reposts Done: <span id="stat-reposts">0</span></div>
+<div>Bookmarks: <span id="stat-bookmarks">0</span></div>
+<div>Reels Viewed: <span id="stat-reels">0</span></div>
+<div>Stories Viewed: <span id="stat-stories">0</span></div>
+<div>Posts Posted: <span id="stat-posts">0</span></div>
+<div>Profiles Visited: <span id="stat-profiles">0</span></div>
 </div>
-
-<!-- ✅ ADD these two new elements inside #app-frame, BEFORE .content-wrapper -->
-
-<div class="stats-toggle-bar" onclick="toggleStats()">Show Stats ▼</div>
-
-<div id="stats-container" class="collapsed">
-  <div class="live-stats-sidebar">
-    <div>Minutes Wasted: <span id="stat-minutes">0</span></div>
-    <div>Scrolls Done: <span id="stat-scrolls">0</span></div>
-    <div>Likes Given: <span id="stat-likes">0</span></div>
-    <div>Comments Given: <span id="stat-comments">0</span></div>
-    <div>Reposts Done: <span id="stat-reposts">0</span></div>
-    <div>Bookmarks: <span id="stat-bookmarks">0</span></div>
-    <div>Reels Viewed: <span id="stat-reels">0</span></div>
-    <div>Stories Viewed: <span id="stat-stories">0</span></div>
-    <div>Posts Posted: <span id="stat-posts">0</span></div>
-    <div>Profiles Visited: <span id="stat-profiles">0</span></div>
-  </div>
-</div>
-
 
 
 <div id="app-frame">
@@ -631,18 +617,6 @@ if (statEl) statEl.textContent = visited + 1;
 });
 
 updateStats();
-function toggleStats() {
-  const container = document.getElementById('stats-container');
-  const toggleBar = document.querySelector('.stats-toggle-bar');
-
-  if (container.classList.contains('collapsed')) {
-    container.classList.remove('collapsed');
-    toggleBar.innerHTML = 'Hide Stats ▲';
-  } else {
-    container.classList.add('collapsed');
-    toggleBar.innerHTML = 'Show Stats ▼';
-  }
-}
 
 lucide.createIcons();
 
@@ -651,3 +625,4 @@ lucide.createIcons();
 </div> <!-- closes .layout-wrapper -->
 </body>
 </html>
+
