--- a/index.html
+++ b/index.html
@@ -96,181 +96,70 @@ text-decoration: none;
 font-size: 1.3rem;
 }
 @media (max-width: 768px) {
-.layout-wrapper {
-flex-direction: column;
-align-items: center;
-}
-#live-stats {
-width: 100%;
-margin: 0 0 20px 0;
-flex-direction: row;
-justify-content: space-around;
-}
-#app-frame {
-width: 100%;
-height: 100%;
-border-radius: 0;
-}
-}
+  .layout-wrapper {
+    flex-direction: column;
+    align-items: center;
+    height: auto;
+    overflow-y: auto;
+    padding: 10px 0;
+  }
 
-/* Original styles */
-header {
-display: flex;
-align-items: center;
-justify-content: space-between;
-padding: 1rem;
-background-color: #1a1a1a;
-border-bottom: 1px solid #333;
-}
-.logo-img {
-height: 48px;
-max-width: 200px;
-object-fit: contain;
-margin-left: 1rem;
-filter: drop-shadow(0 0 2px #f44);
-}
+  #live-stats {
+    width: 95%;
+    margin: 10px 0;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10px;
+    padding: 10px;
+    font-size: 0.8rem;
+    position: relative;
+    top: 0;
+  }
 
-}
-.nav-icons {
-display: flex;
-align-items: center;
-gap: 15px;
-position: relative;
-}
-.nav-icons img {
-width: 24px;
-height: 24px;
-cursor: pointer;
-filter: invert(60%);
-}
-#notificationDropdown {
-position: absolute;
-top: 40px;
-right: 0;
-background-color: #1a1a1a;
-border: 1px solid #333;
-padding: 0.5rem;
-border-radius: 6px;
-width: 250px;
-display: none;
-z-index: 1000;
-box-shadow: 0 0 10px #000;
-}
-#notificationDropdown p {
-font-size: 0.9rem;
-color: #ccc;
-margin-bottom: 0.5rem;
-border-bottom: 1px solid #333;
-padding-bottom: 0.5rem;
-}
-.stories {
-display: flex;
-overflow-x: auto;
-padding: 1rem;
-border-bottom: 1px solid #333;
-}
-.story {
-flex: 0 0 auto;
-width: 60px;
-height: 60px;
-border-radius: 50%;
-margin-right: 10px;
-border: 2px solid #f44;
-background-size: cover;
-background-position: center;
-background-color: #444;
-}
-main {
-padding: 1rem;
-}
-.post {
-background-color: #1c1c1c;
-border: 1px solid #333;
-margin: 2rem auto;
-width: 100%;
-max-width: 550px;
-color: #fff;
-position: relative;
-}
-.post-header {
-display: flex;
-align-items: center;
-padding: 10px;
-}
-.post-header img {
-width: 40px;
-height: 40px;
-border-radius: 50%;
-margin-right: 10px;
-}
-.post-header span {
-font-weight: bold;
-color: #ccc;
-}
-.post-image {
-width: 100%;
-height: 400px;
-background-color: #333;
-display: flex;
-align-items: center;
-justify-content: center;
-text-align: center;
-font-size: 2rem;
-font-weight: bold;
-color: #eee;
-}
-.post-actions {
-display: flex;
-justify-content: space-around;
-padding: 10px;
-}
-.post-actions button {
-background: none;
-border: none;
-cursor: pointer;
-color: #ccc;
-font-size: 1.1rem;
-}
-.comment-box {
-padding: 0.5rem 1rem 1rem;
-display: flex;
-gap: 10px;
-align-items: center;
-display: none;
-}
-.comment-box input {
-flex: 1;
-padding: 0.5rem;
-background-color: #111;
-border: 1px solid #444;
-color: #ccc;
-border-radius: 4px;
-font-size: 0.9rem;
-}
-.comment-box button {
-padding: 0.5rem 0.8rem;
-background-color: #222;
-border: 1px solid #444;
-color: #ccc;
-border-radius: 4px;
-cursor: pointer;
-}
-.like-popup {
-position: absolute;
-top: 60%;
-left: 50%;
-transform: translate(-50%, 0);
-background-color: #222;
-color: #fff;
-font-size: 1rem;
-font-weight: bold;
-padding: 12px 18px;
-border-radius: 10px;
-box-shadow: 0 0 12px rgba(255, 255, 255, 0.2);
-opacity: 0;
-pointer-events: none;
-z-index: 5;
-animation: floatUpFade 2.5s ease-out forwards;
+  #app-frame {
+    width: 95%;
+    height: auto;
+    min-height: 90vh;
+    border-radius: 10px;
+  }
+
+  .bottom-nav {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    border-radius: 0;
+    padding: 8px 0;
+  }
+
+  .content-wrapper {
+    padding-bottom: 80px; /* room for fixed bottom nav */
+  }
+
+  .post {
+    margin: 1rem auto;
+    width: 100%;
+  }
+
+  .stories {
+    padding: 0.5rem;
+    gap: 8px;
+  }
+
+  .story {
+    width: 50px;
+    height: 50px;
+    margin-right: 8px;
+  }
+
+  header {
+    padding: 0.5rem;
+  }
+
+  .nav-icons {
+    gap: 10px;
+  }
 }
 
 @keyframes floatUpFade {
@@ -360,55 +249,12 @@ transform: translate(-50%, -5px);
     padding-bottom: 60px; /* space for bottom nav */
   }
 }
-/* your existing CSS */
-.page-content {
-  margin: auto;
-  max-width: 600px;
-}
-
-/* Paste this new stuff at the very end */
-#stats-toggle-bar {
-  display: none;
-  position: sticky;
-  top: 0;
-  background: white;
-  z-index: 999;
-  text-align: center;
-  border-bottom: 1px solid #ccc;
-}
-
-/* (rest of the mobile stats CSS here) */
 
 </style>
 <script src="https://unpkg.com/lucide@latest"></script>
 
 </head>
 <body>
-   <body>
-  <!-- Mobile Stats Toggle (hidden on desktop) -->
-  <div class="stats-toggle-bar" id="stats-toggle-bar">
-    <button id="toggle-stats-btn">Show Stats ▼</button>
-  </div>
-
-  <!-- Mobile Stats Panel (hidden by default) -->
-  <div id="mobile-stats" class="mobile-stats">
-    <div class="stats-grid">
-      <div>Minutes Wasted: 0</div>
-      <div>Scrolls Done: 0</div>
-      <div>Likes Given: 0</div>
-      <div>Comments Given: 0</div>
-      <div>Reposts Done: 0</div>
-      <div>Bookmarks: 0</div>
-      <div>Reels Viewed: 0</div>
-      <div>Stories Viewed: 0</div>
-      <div>Posts Posted: 0</div>
-      <div>Profiles Visited: 0</div>
-    </div>
-  </div>
-
-  <div class="content">
-    <!-- Main content starts here -->
- 
 <div class="layout-wrapper">
 <div id="live-stats">
 <div>Minutes Wasted: <span id="stat-minutes">0</span></div>
@@ -666,21 +512,6 @@ lucide.createIcons();
 </script>
 </div> <!-- closes #app-frame -->
 </div> <!-- closes .layout-wrapper -->
-<script>
-const toggleBtn = document.getElementById('toggle-stats-btn');
-const mobileStats = document.getElementById('mobile-stats');
-
-toggleBtn.addEventListener('click', () => {
-  if (mobileStats.style.display === 'block') {
-    mobileStats.style.display = 'none';
-    toggleBtn.textContent = 'Show Stats ▼';
-  } else {
-    mobileStats.style.display = 'block';
-    toggleBtn.textContent = 'Hide Stats ▲';
-  }
-});
-</script>
-
-   </body>
+</body>
 </html>
 
