--- a/index.html
+++ b/index.html
@@ -2,20 +2,12 @@
 <html lang="en">
 <head>
 <script src="https://unpkg.com/lucide@latest"></script>
-
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>InstaVoid</title>
 <style>
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-html, body {
-  height: 100%;
-  overflow: hidden;
-}
+* { box-sizing: border-box; margin: 0; padding: 0; }
+html, body { height: 100%; overflow: hidden; }
 body {
   font-family: Arial, sans-serif;
   background-color: #eeeeee;
@@ -32,6 +24,13 @@ body {
   width: 100%;
   max-width: 1600px;
   height: 100vh;
+}
+#live-stats-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+#toggle-stats {
+  display: none;
 }
 #live-stats {
   flex-shrink: 0;
@@ -66,16 +65,6 @@ body {
   overflow-y: auto;
   padding-bottom: 60px;
 }
-.content-wrapper::-webkit-scrollbar {
-  width: 8px;
-}
-.content-wrapper::-webkit-scrollbar-track {
-  background: transparent;
-}
-.content-wrapper::-webkit-scrollbar-thumb {
-  background-color: rgba(100, 100, 100, 0.3);
-  border-radius: 4px;
-}
 .bottom-nav {
   position: absolute;
   bottom: 0;
@@ -95,185 +84,8 @@ body {
   text-decoration: none;
   font-size: 1.3rem;
 }
-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 1rem;
-  background-color: #1a1a1a;
-  border-bottom: 1px solid #333;
-}
-.logo-img {
-  height: 48px;
-  max-width: 200px;
-  object-fit: contain;
-  margin-left: 1rem;
-  filter: drop-shadow(0 0 2px #f44);
-}
-.nav-icons {
-  display: flex;
-  align-items: center;
-  gap: 15px;
-  position: relative;
-}
-.nav-icons img {
-  width: 24px;
-  height: 24px;
-  cursor: pointer;
-  filter: invert(60%);
-}
-#notificationDropdown {
-  position: absolute;
-  top: 40px;
-  right: 0;
-  background-color: #1a1a1a;
-  border: 1px solid #333;
-  padding: 0.5rem;
-  border-radius: 6px;
-  width: 250px;
-  display: none;
-  z-index: 1000;
-  box-shadow: 0 0 10px #000;
-}
-#notificationDropdown p {
-  font-size: 0.9rem;
-  color: #ccc;
-  margin-bottom: 0.5rem;
-  border-bottom: 1px solid #333;
-  padding-bottom: 0.5rem;
-}
-.stories {
-  display: flex;
-  overflow-x: auto;
-  padding: 1rem;
-  border-bottom: 1px solid #333;
-}
-.story {
-  flex: 0 0 auto;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  margin-right: 10px;
-  border: 2px solid #f44;
-  background-size: cover;
-  background-position: center;
-  background-color: #444;
-}
-main {
-  padding: 1rem;
-}
-.post {
-  background-color: #1c1c1c;
-  border: 1px solid #333;
-  margin: 2rem auto;
-  width: 100%;
-  max-width: 550px;
-  color: #fff;
-  position: relative;
-}
-.post-header {
-  display: flex;
-  align-items: center;
-  padding: 10px;
-}
-.post-header img {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  margin-right: 10px;
-}
-.post-header span {
-  font-weight: bold;
-  color: #ccc;
-}
-.post-image {
-  width: 100%;
-  height: 400px;
-  background-color: #333;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  font-size: 2rem;
-  font-weight: bold;
-  color: #eee;
-}
-.post-actions {
-  display: flex;
-  justify-content: space-around;
-  padding: 10px;
-}
-.post-actions button {
-  background: none;
-  border: none;
-  cursor: pointer;
-  color: #ccc;
-  font-size: 1.1rem;
-}
-.comment-box {
-  padding: 0.5rem 1rem 1rem;
-  display: flex;
-  gap: 10px;
-  align-items: center;
-  display: none;
-}
-.comment-box input {
-  flex: 1;
-  padding: 0.5rem;
-  background-color: #111;
-  border: 1px solid #444;
-  color: #ccc;
-  border-radius: 4px;
-  font-size: 0.9rem;
-}
-.comment-box button {
-  padding: 0.5rem 0.8rem;
-  background-color: #222;
-  border: 1px solid #444;
-  color: #ccc;
-  border-radius: 4px;
-  cursor: pointer;
-}
-.like-popup {
-  position: absolute;
-  top: 60%;
-  left: 50%;
-  transform: translate(-50%, 0);
-  background-color: #222;
-  color: #fff;
-  font-size: 1rem;
-  font-weight: bold;
-  padding: 12px 18px;
-  border-radius: 10px;
-  box-shadow: 0 0 12px rgba(255, 255, 255, 0.2);
-  opacity: 0;
-  pointer-events: none;
-  z-index: 5;
-  animation: floatUpFade 2.5s ease-out forwards;
-}
-@keyframes floatUpFade {
-  0% {
-    opacity: 0;
-    transform: translate(-50%, 10px);
-  }
-  10% {
-    opacity: 1;
-  }
-  90% {
-    opacity: 1;
-    transform: translate(-50%, 0px);
-  }
-  100% {
-    opacity: 0;
-    transform: translate(-50%, -5px);
-  }
-}
 @media (max-width: 768px) {
-  html, body {
-    overflow: auto;
-    height: auto;
-  }
-
+  html, body { overflow: auto; height: auto; }
   .layout-wrapper {
     flex-direction: column;
     align-items: center;
@@ -282,26 +94,42 @@ main {
     overflow-y: auto;
     padding: 10px 0;
   }
-
+  #live-stats-wrapper {
+    position: sticky;
+    top: 0;
+    background: #111;
+    width: 100%;
+    z-index: 1000;
+  }
+  #toggle-stats {
+    display: block;
+    background: #222;
+    color: #ccc;
+    width: 100%;
+    padding: 10px;
+    border: none;
+    font-size: 1rem;
+    cursor: pointer;
+    text-align: center;
+    border-bottom: 1px solid #333;
+  }
   #live-stats {
-    width: 95%;
-    margin: 10px 0;
-    display: grid;
+    display: none;
+    background: #1a1a1a;
+    padding: 10px;
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 10px;
-    padding: 10px;
     font-size: 0.8rem;
-    position: relative;
-    top: 0;
   }
-
+  #live-stats.show {
+    display: grid;
+  }
   #app-frame {
     width: 95%;
     height: auto;
     min-height: 90vh;
     border-radius: 10px;
   }
-
   .bottom-nav {
     position: fixed;
     bottom: 0;
@@ -311,81 +139,64 @@ main {
     border-radius: 0;
     padding: 8px 0;
   }
-
   .content-wrapper {
-    padding-bottom: 80px; /* room for bottom nav */
-  }
-
-  .post {
-    margin: 1rem auto;
-    width: 100%;
-  }
-
-  .stories {
-    padding: 0.5rem;
-    gap: 8px;
-  }
-
-  .story {
-    width: 50px;
-    height: 50px;
-    margin-right: 8px;
-  }
-
-  header {
-    padding: 0.5rem;
-  }
-
-  .nav-icons {
-    gap: 10px;
+    padding-bottom: 80px;
   }
 }
-
 </style>
-
-<script src="https://unpkg.com/lucide@latest"></script>
-
 </head>
 <body>
 <div class="layout-wrapper">
-<div id="live-stats">
-<div>Minutes Wasted: <span id="stat-minutes">0</span></div>
-<div>Scrolls Done: <span id="stat-scrolls">0</span></div>
-<div>Likes Given: <span id="stat-likes">0</span></div>
-<div>Comments Given: <span id="stat-comments">0</span></div>
-<div>Reposts Done: <span id="stat-reposts">0</span></div>
-<div>Bookmarks: <span id="stat-bookmarks">0</span></div>
-<div>Reels Viewed: <span id="stat-reels">0</span></div>
-<div>Stories Viewed: <span id="stat-stories">0</span></div>
-<div>Posts Posted: <span id="stat-posts">0</span></div>
-<div>Profiles Visited: <span id="stat-profiles">0</span></div>
+<div id="live-stats-wrapper">
+  <button id="toggle-stats">Show Stats ▼</button>
+  <div id="live-stats">
+    <div>Minutes Wasted: <span id="stat-minutes">0</span></div>
+    <div>Scrolls Done: <span id="stat-scrolls">0</span></div>
+    <div>Likes Given: <span id="stat-likes">0</span></div>
+    <div>Comments Given: <span id="stat-comments">0</span></div>
+    <div>Reposts Done: <span id="stat-reposts">0</span></div>
+    <div>Bookmarks: <span id="stat-bookmarks">0</span></div>
+    <div>Reels Viewed: <span id="stat-reels">0</span></div>
+    <div>Stories Viewed: <span id="stat-stories">0</span></div>
+    <div>Posts Posted: <span id="stat-posts">0</span></div>
+    <div>Profiles Visited: <span id="stat-profiles">0</span></div>
+  </div>
 </div>
-
 
 <div id="app-frame">
-<div class="content-wrapper">
-<header>
-<img src="INSTAVOID - LOGO.png" alt="InstaVoid Logo" class="logo-img" />
-<div class="nav-icons">
-<img id="notifIcon" src="https://cdn-icons-png.flaticon.com/512/1827/1827370.png" alt="notifications" />
-<div id="notificationDropdown"></div>
+  <div class="content-wrapper">
+    <header>
+      <img src="INSTAVOID - LOGO.png" alt="InstaVoid Logo" class="logo-img" />
+      <div class="nav-icons">
+        <img id="notifIcon" src="https://cdn-icons-png.flaticon.com/512/1827/1827370.png" alt="notifications" />
+        <div id="notificationDropdown"></div>
+      </div>
+    </header>
+    <div class="stories" id="storiesBar"></div>
+    <main id="feed"></main>
+  </div>
+  <div class="bottom-nav">
+    <a href="index.html"><i data-lucide="home"></i></a>
+    <a href="search.html"><i data-lucide="search"></i></a>
+    <a href="publish.html"><i data-lucide="plus-circle"></i></a>
+    <a href="reels.html"><i data-lucide="video"></i></a>
+    <a href="profile.html"><i data-lucide="user"></i></a>
+  </div>
 </div>
-</header>
-
-
-<div class="stories" id="storiesBar"></div>
-<main id="feed"></main>
 </div>
 
-<div class="bottom-nav">
-<a href="index.html"><i data-lucide="home"></i></a>
-<a href="search.html"><i data-lucide="search"></i></a>
-<a href="publish.html"><i data-lucide="plus-circle"></i></a>
-<a href="reels.html"><i data-lucide="video"></i></a>
-<a href="profile.html"><i data-lucide="user"></i></a>
-</div>
+<script>
+const toggleBtn = document.getElementById('toggle-stats');
+const liveStats = document.getElementById('live-stats');
 
-
+if (toggleBtn) {
+  toggleBtn.addEventListener('click', () => {
+    liveStats.classList.toggle('show');
+    toggleBtn.textContent = liveStats.classList.contains('show') ? 'Hide Stats ▲' : 'Show Stats ▼';
+  });
+}
+</script>
+<script src="https://unpkg.com/lucide@latest"></script>
 <script>
 const feed = document.getElementById("feed");
 const storiesBar = document.getElementById("storiesBar");
@@ -601,9 +412,7 @@ updateStats();
 
 lucide.createIcons();
 
+
 </script>
-</div> <!-- closes #app-frame -->
-</div> <!-- closes .layout-wrapper -->
 </body>
 </html>
-
