--- a/index.html
+++ b/index.html
@@ -98,27 +98,24 @@ text-decoration: none;
 font-size: 1.3rem;
 }
 @media (max-width: 768px) {
-  .layout-wrapper {
+ .layout-wrapper {
     flex-direction: column;
     align-items: center;
   }
   #live-stats {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    width: 100%;
-    margin: 0;
-    padding: 8px;
-    font-size: 0.75rem;
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(2, auto);
-    text-align: center;
-    border-radius: 0;
-    transform: translateY(0);
-    z-index: 1000;
-  }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  font-size: 0.8rem;
+  padding: 10px;
+  row-gap: 4px;
+}
+
+  .content-wrapper {
+  padding-top: 110px; /* space for stats bar */
+}
+
   #app-frame {
     width: 100%;
     height: 100%;
