--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ font-size: 1.3rem;
     flex-direction: column;
     align-items: center;
   }
-  #live-stats {
+ #live-stats {
   position: fixed;
   top: 0;
   left: 0;
@@ -113,14 +113,16 @@ font-size: 1.3rem;
   font-size: 0.75rem;
   background-color: #1a1a1a;
   display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(2, auto);
+  grid-template-columns: repeat(5, 1fr);  /* 5 per row */
+  grid-template-rows: repeat(2, auto);    /* 2 rows */
   text-align: center;
   border-radius: 0;
   transform: translateY(0);
   z-index: 1000;
   transition: transform 0.3s ease-in-out;
+  gap: 4px;
 }
+
 
 
   .content-wrapper {
