--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@ font-size: 1.3rem;
   font-size: 0.75rem;
   background-color: #1a1a1a;
   display: grid;
-  grid-template-columns: repeat(5, 1fr);  /* 5 per row */
-  grid-template-rows: repeat(2, auto);    /* 2 rows */
+  grid-template-columns: repeat(2, 1fr);  /* 2 per row */
+  grid-template-rows: repeat(5, auto);    /* 5 rows total */
   text-align: center;
   border-radius: 0;
   transform: translateY(0);
@@ -122,6 +122,7 @@ font-size: 1.3rem;
   transition: transform 0.3s ease-in-out;
   gap: 4px;
 }
+
 
 
 
