--- a/search.html
+++ b/search.html
@@ -61,6 +61,7 @@
       position: relative;
     }
     .content-wrapper {
+      <div style="height: 80px;"></div>
       flex: 1;
       overflow-y: auto;
       padding: 1rem;
